// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should disable selection of unavailable layers and show a warning 1`] = `
<div
  class="basemap-switcher-select chakra-select__root css-3jlqt6"
  data-part="root"
  data-scope="select"
  dir="ltr"
  id="select:_r_c_"
>
  <div
    class="chakra-select__control css-17j1053"
    data-part="control"
    data-scope="select"
    data-state="closed"
    dir="ltr"
    id="select:_r_c_:control"
  >
    <button
      aria-controls="select:_r_c_:content"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-invalid="false"
      aria-labelledby="select:_r_c_:label"
      aria-required="false"
      class="basemap-switcher-select-trigger chakra-select__trigger css-lwaeyv"
      data-part="trigger"
      data-scope="select"
      data-state="closed"
      dir="ltr"
      id="select:_r_c_:trigger"
      role="combobox"
      type="button"
    >
      <span
        class="chakra-select__valueText css-amxqtw"
        data-part="value-text"
        data-scope="select"
        dir="ltr"
      >
        <span>
          OSM
        </span>
        <div
          class="basemap-switcher-option-problem-indicator css-eggl6h"
        >
          <span
            class="chakra-tooltip__trigger"
            data-part="trigger"
            data-scope="tooltip"
            data-state="closed"
            dir="ltr"
            id="tooltip:_r_d_:trigger"
          >
            <svg
              aria-label="layerNotAvailable"
              color="red"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: red;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
        </div>
      </span>
    </button>
    <div
      class="chakra-select__indicatorGroup css-1fx1ifu"
    >
      <div
        aria-hidden="true"
        class="chakra-select__indicator css-1atg1ut"
        data-part="indicator"
        data-scope="select"
        data-state="closed"
        dir="ltr"
      >
        <svg
          class="css-s3mb0o"
          viewBox="0 0 24 24"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`should successfully create a basemap switcher component 1`] = `
<div
  class="basemap-switcher"
  data-testid="switcher"
>
  <div
    class="basemap-switcher-select chakra-select__root css-3jlqt6"
    data-part="root"
    data-scope="select"
    dir="ltr"
    id="select:_r_3_"
  >
    <div
      class="chakra-select__control css-17j1053"
      data-part="control"
      data-scope="select"
      data-state="open"
      dir="ltr"
      id="select:_r_3_:control"
    >
      <button
        aria-controls="select:_r_3_:content"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-labelledby="select:_r_3_:label"
        aria-required="false"
        class="basemap-switcher-select-trigger chakra-select__trigger css-lwaeyv"
        data-part="trigger"
        data-placement="bottom-start"
        data-scope="select"
        data-state="open"
        dir="ltr"
        id="select:_r_3_:trigger"
        role="combobox"
        type="button"
      >
        <span
          class="chakra-select__valueText css-amxqtw"
          data-part="value-text"
          data-scope="select"
          dir="ltr"
        >
          <span>
            emptyBasemapLabel
          </span>
        </span>
      </button>
      <div
        class="chakra-select__indicatorGroup css-1fx1ifu"
      >
        <div
          aria-hidden="true"
          class="chakra-select__indicator css-1atg1ut"
          data-part="indicator"
          data-scope="select"
          data-state="open"
          dir="ltr"
        >
          <svg
            class="css-s3mb0o"
            viewBox="0 0 24 24"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
